--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "zsh/git-prompt"]
-	path = zsh/git-prompt
-	url = git://github.com/Greduan/zsh_git-prompt.git
+[submodule "zsh/zsh-vcs-prompt"]
+	path = zsh/zsh-vcs-prompt
+	url = git@github.com:yonchu/zsh-vcs-prompt.git
