--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "zsh/zsh-vcs-prompt"]
 	path = zsh/zsh-vcs-prompt
-	url = git@github.com:yonchu/zsh-vcs-prompt.git
+	url = git://github.com/yonchu/zsh-vcs-prompt.git
