Changes to tmux.conf, vimrc and VCS prompt

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,37 +1,31 @@
-# Adding mouse support
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
+set-option -g default-shell '/bin/zsh'    # Set my default shell
+set -g default-terminal 'screen-256color' # Enable 256 colors
 
-# Zsh
-set-option -g default-shell $SHELL
+set -g mode-mouse on           # Enable use of mouse
+setw -g mouse-select-pane on   # Allow mouse to switch panes
+setw -g mouse-select-window on # Same but windows
 
-# Looking good
-set -g default-terminal "screen-256color"
+unbind C-b        # Un-bind default prefix
+set -g prefix C-z # Set new prefix
 
-# Act like GNU screen
-unbind C-b
-set -g prefix C-a
-
-# A mouse
-set -g mode-mouse on
-setw -g mouse-select-window on
-setw -g mouse-select-pane on
-
-# Act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+setw -g mode-keys vi  # Set keys mode to vi mode
+bind h select-pane -L # h goes to pane to left
+bind j select-pane -D # j goes to pane to down
+bind k select-pane -U # k goes to pane to up
+bind l select-pane -R # l goes to pane to right
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
-unbind [
-bind ` copy-mode
-unbind p
-bind p paste-buffer
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+
+unbind [            # Un-bind [
+bind ` copy-mode    # ` starts switches copy mode
+
+unbind p            # Un-bind default behavior of p
+bind p paste-buffer # And set it to paste buffer
+
+bind -t vi-copy v begin-selection # v begins selection (visual mode)
+bind -t vi-copy y copy-selection  # y in visual mode yanks text
 
 # After copying to a tmux buffer, hit y again to copy to clipboard
 bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+# vim:tw=79:et:
