Changes to bootstrap, Vim, tmux and Zsh VCS prompt
~ Updated the zsh-vcs-prompt to the latest version.
~ Changes to my .vimrc file.
~ Changes to my tmux.conf file, finally going to get into it.
~ Moved setting the default shell from the set_osx_defaults.sh file to
  the bootstrap.sh file, it fits better.
~ Change to the brew_installs.sh file.
* Fixed bug with the make_symlinks.sh file and the tmux.conf file, it
  pointed directly to the /vim folder instead of the /tmux folder.
* Fixed bug with the delete_symlinks file regarding the tmux.conf file,
  before it created a new symlink, instead of deleting it. :P

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,31 +1,58 @@
-set-option -g default-shell '/bin/zsh'    # Set my default shell
-set -g default-terminal 'screen-256color' # Enable 256 colors
+# Set the base index for windows to 1 instead of 0
+set -g base-index 1
 
-set -g mode-mouse on           # Enable use of mouse
-setw -g mouse-select-pane on   # Allow mouse to switch panes
-setw -g mouse-select-window on # Same but windows
+# Set the base index for panes to 1 instead of 1
+setw -g pane-base-index 1
 
-unbind C-b        # Un-bind default prefix
-set -g prefix C-z # Set new prefix
+# Vim like {{{
 
-setw -g mode-keys vi  # Set keys mode to vi mode
-bind h select-pane -L # h goes to pane to left
-bind j select-pane -D # j goes to pane to down
-bind k select-pane -U # k goes to pane to up
-bind l select-pane -R # l goes to pane to right
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+# Act like Vim
+setw -g mode-keys vi
 
-unbind [            # Un-bind [
-bind ` copy-mode    # ` starts switches copy mode
+# hjkl to move between panes, like Vim
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
-unbind p            # Un-bind default behavior of p
-bind p paste-buffer # And set it to paste buffer
+# Use 'PREFIX CTRL+hl'
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
 
-bind -t vi-copy v begin-selection # v begins selection (visual mode)
-bind -t vi-copy y copy-selection  # y in visual mode yanks text
+# }}}
 
-# After copying to a tmux buffer, hit y again to copy to clipboard
-bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+# Enable 256 color terminal
+set -g default-terminal "xterm-256color"
 
-# vim:tw=79:et:
+# Enable mouse support (works in iTerm)
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+
+# scrollback buffer size increase
+set -g history-limit 500000
+
+# Allows for faster key repetition
+set -s escape-time 1
+
+# Keybindings {{{
+
+# Use C-b v to paste the tmux buffer
+bind v paste-buffer
+
+# Set the prefix keybinding
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+# Use easy to remember keybindings to split windows
+bind | split-window -h
+bind - split-window -v
+
+# Reload the file with Prefix r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# }}}
+
+# vim:tw=79:et:fmr={{{,}}}
