--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "zsh/zsh-vcs-prompt"]
-	path = zsh/zsh-vcs-prompt
+[submodule "shells/zsh/zsh-vcs-prompt"]
+	path = shells/zsh/zsh-vcs-prompt
 	url = git://github.com/yonchu/zsh-vcs-prompt.git
