--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ vim/bundle/Vimpress/custom/configs.vim
 vim/custom/configs.vim
 vim/bundle/
 vim/undodir/
+vim/tmpdir/
 
 # Zsh history
 shells/zsh/zsh_history/
