--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,11 +50,20 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # Use easy to remember keybindings to split windows
+unbind %
 bind | split-window -h
 bind - split-window -v
 
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Smart pane switching with awareness of vim splits
+# https://gist.github.com/mislav/5189704
+bind -n C-k run-shell 'tmux-vim-select-pane -U'
+bind -n C-j run-shell 'tmux-vim-select-pane -D'
+bind -n C-h run-shell 'tmux-vim-select-pane -L'
+bind -n C-l run-shell 'tmux-vim-select-pane -R'
+bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
 
 # }}}
 
