--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "shells/zsh/zsh-vcs-prompt"]
-	path = shells/zsh/zsh-vcs-prompt
-	url = git://github.com/yonchu/zsh-vcs-prompt.git
+[submodule "zsh/zsh-vcs-prompt"]
+	path = zsh/zsh-vcs-prompt
+	url = https://github.com/yonchu/zsh-vcs-prompt.git
