--- a/tmux.conf
+++ b/tmux.conf
@@ -25,7 +25,7 @@ set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:X
 # }}}
 
 # Enable 256 color terminal
-set -g default-terminal "rxvt-unicode-256color"
+set -g default-terminal "screen-256color"
 
 # Enable mouse support (works in iTerm)
 setw -g mode-mouse on
