Added lots of Mutt stuff and some other stuff
Updated license, changed vimrc and zshrc, added the `t` app added some
safe-paste to Zsh.

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,7 @@ Thumbs.db
 # Vim stuff
 vim/bundle/
 vim/autoload/pathogen.vim
-vim/undodir/
-vim/tmpdir/
+vim/tmp/
 
 # Zsh history
 shells/zsh/zsh_history/
