--- a/tmux.conf
+++ b/tmux.conf
@@ -1,28 +1,11 @@
+# Fix clipboard on Macs
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # Set the base index for windows to 1 instead of 0
 set -g base-index 1
 
 # Set the base index for panes to 1 instead of 1
 setw -g pane-base-index 1
-
-# Vim like {{{
-
-# Act like Vim
-setw -g mode-keys vi
-
-# hjkl to move between panes, like Vim
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
-# Use 'PREFIX CTRL+hl'
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-# Vim cursor
-set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:XT:Ms=\E]52;%p1%s;%p2%s\007:Cc=\E]12;%p1%s\007:Cr=\E]112\007:Cs=\E]50;CursorShape=%?%p1%{3}%<%t%{0}%e%p1%{2}%-%;%d\007'
-
-# }}}
 
 # Enable 256 color terminal
 set -g default-terminal "screen-256color"
@@ -39,9 +22,18 @@ set -g history-limit 500000
 # Allows for faster key repetition
 set -s escape-time 1
 
+# Vim like {{{
+
+# Act like Vim
+setw -g mode-keys vi
+
+# Vim cursor
+set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:XT:Ms=\E]52;%p1%s;%p2%s\007:Cc=\E]12;%p1%s\007:Cr=\E]112\007:Cs=\E]50;CursorShape=%?%p1%{3}%<%t%{0}%e%p1%{2}%-%;%d\007'
+
+# }}}
 # Keybindings {{{
 
-# Use C-b v to paste the tmux buffer
+# Use prefix v to paste the tmux buffer
 bind v paste-buffer
 
 # Set the prefix keybinding
@@ -58,12 +50,48 @@ bind - split-window -v
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Smart pane switching with awareness of vim splits
-# https://gist.github.com/mislav/5189704
-bind -n C-k run-shell 'tmux-vim-select-pane -U'
-bind -n C-j run-shell 'tmux-vim-select-pane -D'
-bind -n C-h run-shell 'tmux-vim-select-pane -L'
-bind -n C-l run-shell 'tmux-vim-select-pane -R'
-bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
+# https://github.com/christoomey/vim-tmux-navigator#tmux-configuration
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l""')"
+
+# }}}
+# Statusline {{{
+
+# enable UTF-8 support in status bar
+set -g status-utf8 on
+
+# set refresh interval for status bar
+set -g status-interval 30
+
+# center the status bar
+set -g status-justify left
+
+# show session, window, pane in left status bar
+set -g status-left-length 40
+set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
+
+# show hostname, date, time, and battery in right status bar
+set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M#[fg=red]#(battery discharging)#[default]#(battery charging)'
+
+# }}}
+# Colors {{{
+
+# color status bar
+set -g status-bg colour235
+set -g status-fg white
+
+# highlight current window
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg green
+
+# set color of active pane
+set -g pane-border-fg colour235
+set -g pane-border-bg black
+set -g pane-active-border-fg green
+set -g pane-active-border-bg black
 
 # }}}
 
