--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,9 @@
+# Custom terminal titles
+set-option -g set-titles on
+set-option -g set-titles-string '[#S:#I #H] #W'
+
+set-window-option -g xterm-keys
+
 # Fix clipboard on Macs
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
@@ -11,10 +17,10 @@ setw -g pane-base-index 1
 set -g default-terminal "screen-256color"
 
 # Enable mouse support (works in iTerm)
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+setw -g mode-mouse off
+set -g mouse-select-pane off
+set -g mouse-resize-pane off
+set -g mouse-select-window off
 
 # scrollback buffer size increase
 set -g history-limit 500000
