--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ setw -g pane-base-index 1
 set -g default-terminal "screen-256color"
 
 # Enable mouse support (works in iTerm)
-setw -g mode-mouse off
+setw -g mode-mouse on
 set -g mouse-select-pane off
 set -g mouse-resize-pane off
 set -g mouse-select-window off
