--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# Set the shell to fish
+set-option -g default-shell "/usr/bin/fish"
+
 # Custom terminal titles
 set-option -g set-titles on
 set-option -g set-titles-string '[#S:#I #H] #W'
