--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # Set the shell to fish
-set-option -g default-shell "/usr/bin/fish"
+set-option -g default-shell "/bin/zsh"
 
 # Custom terminal titles
 set-option -g set-titles on
