Changes for compatibility with urxvt

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # Set the shell to fish
-set-option -g default-shell "/bin/zsh"
+#set-option -g default-shell "/bin/fish"
 
 # Custom terminal titles
 set-option -g set-titles on
@@ -8,7 +8,7 @@ set-option -g set-titles-string '[#S:#I #H] #W'
 set-window-option -g xterm-keys
 
 # Fix clipboard on Macs
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Set the base index for windows to 1 instead of 0
 set -g base-index 1
