XMonad and XMobar! :D
And some other stuff...

--- a/tmux.conf
+++ b/tmux.conf
@@ -69,34 +69,33 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 # }}}
 # Statusline {{{
 
-# enable UTF-8 support in status bar
+# Enable UTF-8 support in status bar
 set -g status-utf8 on
 
-# set refresh interval for status bar
+# Set refresh interval for status bar
 set -g status-interval 30
 
-# center the status bar
-set -g status-justify left
+# Center the status bar
+set -g status-justify centre
 
-# show session, window, pane in left status bar
-set -g status-left-length 40
-set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
-
-# show hostname, date, time, and battery in right status bar
-set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M#[fg=red]#(battery discharging)#[default]#(battery charging)'
+# Statusbar configuration
+set -g status-left-length 20
+set -g status-left '#[fg=green][#S]#[fg=blue] #I:#P#[default]'
+set -g status-right-length 40
+set -g status-right '#[fg=green]#H#[default] | %d %b %R'
 
 # }}}
 # Colors {{{
 
-# color status bar
-set -g status-bg colour235
+# Color status bar
+set -g status-bg colour234
 set -g status-fg white
 
-# highlight current window
+# Highlight current window
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg green
 
-# set color of active pane
+# Set color of active pane
 set -g pane-border-fg colour235
 set -g pane-border-bg black
 set -g pane-active-border-fg green
