Vim Airline yay!

--- a/tmux.conf
+++ b/tmux.conf
@@ -79,10 +79,12 @@ set -g status-interval 30
 set -g status-justify centre
 
 # Statusbar configuration
-set -g status-left-length 20
-set -g status-left '#[fg=green][#S]#[fg=blue] #I:#P#[default]'
-set -g status-right-length 40
-set -g status-right '#[fg=green]#H#[default] | %d %b %R'
+#set -g status-left-length 20
+#set -g status-left '#[fg=green][#S]#[fg=blue] #I:#P#[default]'
+#set -g status-right-length 40
+#set -g status-right '#[fg=green]#H#[default] | %d %b %R'
+
+if-shell "text -f ~/.tmux/tmuxline.sh" "source ~/.tmux/tmuxline.sh"
 
 # }}}
 # Colors {{{
