Updates to stuff, mostly to WM stuff (IIRC)

--- a/tmux.conf
+++ b/tmux.conf
@@ -69,22 +69,7 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 # }}}
 # Statusline {{{
 
-# Enable UTF-8 support in status bar
-set -g status-utf8 on
-
-# Set refresh interval for status bar
-set -g status-interval 30
-
-# Center the status bar
-set -g status-justify centre
-
-# Statusbar configuration
-#set -g status-left-length 20
-#set -g status-left '#[fg=green][#S]#[fg=blue] #I:#P#[default]'
-#set -g status-right-length 40
-#set -g status-right '#[fg=green]#H#[default] | %d %b %R'
-
-if-shell "text -f ~/.tmux/tmuxline.sh" "source ~/.tmux/tmuxline.sh"
+if-shell "test -f ~/.tmux/tmuxline.sh" "source ~/.tmux/tmuxline.sh"
 
 # }}}
 # Colors {{{
